feat:add save user controller in the presentation tier
test:controller tests was made with http and mockito
