# api-contract.yml
@@ -16,7 +16,7 @@ servers:
           - '8092'
         default: '8092'
       basePath:
-        default: /api/v1
+        default: /presentation/v1
 paths:
   /api/v1/users:
     post:
@@ -28,7 +28,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/UserIn"
 
       responses:
         '201':
@@ -38,8 +38,26 @@ paths:
               schema:
                 $ref: "#/components/schemas/UserOut"
 
-        default:
-          description: Unexpected Error
+        '400':
+          description: Invalid query Params
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: Service Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '409':
+          description: User Already Exists
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '500':
+          description: Exception Error
           content:
             application/json:
               schema:
@@ -47,7 +65,7 @@ paths:
 
 components:
   schemas:
-    User:
+    UserIn:
       type: object
       required:
         - email
@@ -111,21 +129,14 @@ components:
         isactive:
           type: boolean
 
-      allOf:     # Combines the User and the output model
-        - $ref: '#/components/schemas/User'
+      allOf:     # Combines the User and the output dto
+        - $ref: '#/components/schemas/UserIn'
 
     Error:
       type: object
       required:
-        - code
         - message
       properties:
-        http-code:
-          type: integer
-          minimum: 3
-          maximum: 3
         message:
-          type: string
-        stack-trace:
           type: string
 
